# monoidsinmaps

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  monoidsinmaps.cabal
src/: Monoidsinmaps.hs
src/Data/Map/: ToMonoid.hs
