cabal-version:       2.4
name:                monoidsinmaps
version:             0.0.0.0
synopsis:            wraper to use mempty and (<>) with lookups and unions
description:         wraper to use mempty and (<>) with lookups and unions
homepage:            https://github.com/nolrai/monoidsinmaps
bug-reports:         https://github.com/nolrai/monoidsinmaps/issues
license:             MIT
license-file:        LICENSE
author:              Chris A. Upshaw
maintainer:          Chris A. Upshaw <chrisaupshaw@gmail.com>
copyright:           2021 Chris A. Upshaw
category:            Data
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.6.5
                     GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/nolrai/monoidsinmaps.git
common common-options
  build-depends:       base ^>= 4.14
                     , relude
  
  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010
library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Data.Map.ToMonoid
  build-depends:       containers
test-suite monoidsinmaps-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       monoidsinmaps
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N